<resources>
    <string name="app_name">LikeTelegramUploadFileChat</string>
    <string name="hint_message">Сообщение</string>
    <string name="btn_select_image">Выбрать изображение</string>
    <string name="toolbar_title_gallery">Галерея</string>
    <string name="open">Открыть</string>
    <string name="search">Поиск</string>
    <string name="panel_item_gallery">Галерея</string>
    <string name="panel_item_file">Файл</string>
    <string name="panel_item_location">Геопозиция</string>
    <string name="panel_item_contact">Контакт</string>
    <string name="panel_item_music">Музыка</string>
</resources>